# Puls-Events-Culturs

./: .env.example  .gitattributes  .gitignore  BOOTSTRAP_GUIDE.md  DAT.docx  Dockerfile  GENERATED_FILES.md  Makefile  README.md  TESTS_SUMMARY.md  api_test.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements.txt#  ~$DAT.docx
.github/workflows/: tests.yml
api/: __init__.py  main.py
data/index/faiss_index/: index.faiss  index.pkl
data/test/: ragas_questions.json  ragas_questions_mini.json
docs/: ARCHITECTURE.md  METRICS.md  QUICKSTART.md  TESTING.md
notebooks/: exploration.md
scripts/: bootstrap.ps1  bootstrap.sh  build_index.py  docker_entrypoint.sh  run_automated_evaluation.py  run_ragas_evaluation.py  run_tests.ps1  test_mistral_api.py
src/: __init__.py  chunking.py  config.py  indexer.py  logger.py  prompts.py  rag.py  ragas_eval.py  reranker.py
tests/: __init__.py  conftest.py  test_api.py  test_chunking.py  test_config.py  test_functional_api.py  test_indexer.py  test_logger.py  test_rag_unit.py
